fix: fixing horizontal scroll

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
   margin: 0px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    
+}
+
+body {
+  overflow-x: hidden;
+
 }
 
 :root {
